# voice-client

./: Cargo.toml  go.mod
src/: connect.rs  main.rs  record.rs
src/audio/: decode.rs  encode.rs  microphone.rs  mod.rs  playback.rs
src/connection/: auth.rs  mod.rs  receiver.rs  udp.rs
src/util/: crypto.rs  hasher.rs  mod.rs
