[package]
name = "voice-client"
version = "0.1.0"
authors = ["Unbreathable"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
cpal = "0.15.2"
opus = "0.3.0"
rodio = "0.17.1"
rubato = "0.12.0"
sha2 = "0.10.6"
